# aya-annotations-ui

./: .gitignore  DEV.md  LICENSE  README.md  cloudbuild-backend-staging.yaml  cloudbuild-backend.yaml  cloudbuild-frontend-staging.yaml  cloudbuild-frontend.yaml  docker-compose.yml
backend/: .env.example  .env.test  Dockerfile  alembic.ini  main.py  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 2023-03-28-0330-cb5b5832ab95-create_initial_schema.py  2023-03-31-1747-8518c1ce4ee0-modify_dataset_name_to_text.py  2023-03-31-1755-48082df0bbba-modify_language_code.py  2023-04-01-2050-5cbe4ab55392-add_language_codes_bulk.py  2023-04-07-0526-b5eb22ad2a73-add_task_num_and_language_id_column_for_task.py  2023-04-09-0404-1276d056240a-unique_constraint_prompt_completion_tasks.py  2023-04-17-0157-eb13778e0573-add_country_codes_bulk.py  2023-04-24-0059-518a194fa402-unique_language_code_records.py  2023-04-28-0209-5536f1b704eb-add_more_languages.py  2023-04-30-2152-c3c4e62fadcf-add_more_missing_lang_codes.py  2023-05-02-0319-d6e388430a44-add_column_to_language_code_to_identify_rtl_or_ltr.py  2023-05-05-0407-2bb74cbd6ca3-recreate_prompt_completion_index.py  2023-05-06-1814-b85910c50121-rename_task_submission.py  2023-05-06-1831-e10691cae9e3-add_task_contribution_table.py  2023-05-09-2158-dbde0b456746-add_leaderboard_columns.py  (+37 more)
backend/instruct_multilingual/: config.py  db.py  exceptions.py
backend/jobs/: __init__.py  common.py  leaderboard_update_job.py
backend/scripts/: seed_db.py
backend/tests/: api_utils.py  conftest.py  db_utils.py
(+142 files in other folders)
